-Added function to check if Sudoku puzzle is actually solved. Didn't test it too much but it seems to work. -Abstracted square types into their own components:    1) ImmutableSquare         -A square in the initial board. The user may not change this square    2) SelectedMutableSquare         -A mutable square in the board that the user has selected. This will put an input field such that the          player can enter a number for this square.    3) UnselectedMutableSquare         -A square in the board the user can change but isn't at this point.    4) CandidateSquare         -An optional square mode where a user can enter several 'candidate' numbers for a square. Still needs to be done.

--- a/src/components/Square/Square.css
+++ b/src/components/Square/Square.css
@@ -30,12 +30,18 @@
 }
 
 .immutable-square {
+  height: 100%;
   color: 	#595959;
   background-color: #f2f2f2;
 }
 
 .primary-error-square {
+  height: 100%;
   background-color: #BF120D;  
+}
+
+.primary-error-square .number-container {
+  height: 100%;
   border: solid #BF6260 thin;
 }
 
